@@ -1,15 +1,24 @@
 package com.togather.partyroom.reservation.service;
 
 import com.togather.member.model.MemberDto;
-import com.togather.member.service.MemberService;
 import com.togather.partyroom.core.converter.PartyRoomConverter;
 import com.togather.partyroom.core.model.PartyRoom;
-import com.togather.partyroom.core.model.PartyRoomOperationDay;
-import com.togather.partyroom.core.repository.PartyRoomOperationDayRepository;
+import com.togather.partyroom.core.model.PartyRoomDetailDto;
+import com.togather.partyroom.core.model.PartyRoomDto;
+import com.togather.partyroom.core.model.PartyRoomOperationDayDto;
+import com.togather.partyroom.core.service.PartyRoomOperationDayService;
 import com.togather.partyroom.core.service.PartyRoomService;
+import com.togather.partyroom.image.model.PartyRoomImageDto;
+import com.togather.partyroom.image.model.PartyRoomImageType;
+import com.togather.partyroom.image.service.PartyRoomImageService;
+import com.togather.partyroom.location.model.PartyRoomLocationDto;
+import com.togather.partyroom.location.service.PartyRoomLocationService;
+import com.togather.partyroom.payment.model.PaymentStatus;
 import com.togather.partyroom.reservation.converter.PartyRoomReservationConverter;
 import com.togather.partyroom.reservation.model.PartyRoomReservation;
 import com.togather.partyroom.reservation.model.PartyRoomReservationDto;
+import com.togather.partyroom.reservation.model.PartyRoomReservationRequestDto;
+import com.togather.partyroom.reservation.model.PartyRoomReservationResponseDto;
 import com.togather.partyroom.reservation.repository.PartyRoomReservationRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -19,8 +28,9 @@ import org.springframework.util.CollectionUtils;
 
 import java.time.DayOfWeek;
 
-import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.ZoneId;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,53 +45,111 @@ public class PartyRoomReservationService {
     private final PartyRoomReservationConverter partyRoomReservationConverter;
     private final PartyRoomService partyRoomService;
     private final PartyRoomConverter partyRoomConverter;
-    private final MemberService memberService;
-    private final PartyRoomOperationDayRepository partyRoomOperationDayRepository;
+    private final PartyRoomLocationService partyRoomLocationService;
+    private final PartyRoomImageService partyRoomImageService;
+    private final PartyRoomOperationDayService partyRoomOperationDayService;
 
 
     @Transactional
-    public void register(PartyRoomReservationDto partyRoomReservationDto) {
+    public void register(PartyRoomReservationRequestDto partyRoomReservationRequestDto, MemberDto loginUser) {
+        PartyRoomDto partyRoomDto = partyRoomService.findPartyRoomDtoById(partyRoomReservationRequestDto.getPartyRoomId());
 
-        PartyRoom findPartyRoom = partyRoomService.findById(partyRoomReservationDto.getPartyRoomDto().getPartyRoomId());
-        MemberDto memberDto = memberService.findMemberDtoById(partyRoomReservationDto.getReservationGuestDto().getMemberSrl());
-        partyRoomReservationDto.setReservationGuestDto(memberDto);
-        partyRoomReservationDto.setPartyRoomDto(partyRoomConverter.convertFromEntity(findPartyRoom));
-        partyRoomReservationDto.setBookedDate(LocalDate.now(ZoneId.of("Asia/Seoul")));
+        PartyRoomReservationDto partyRoomReservationDto = PartyRoomReservationDto.builder()
+                .partyRoomDto(partyRoomDto)
+                .reservationGuestDto(loginUser)
+                .guestCount(partyRoomReservationRequestDto.getGuestCount())
+                .startTime(partyRoomReservationRequestDto.getStartTime())
+                .endTime(partyRoomReservationRequestDto.getEndTime())
+                .paymentStatus(PaymentStatus.PENDING)
+                .bookedDate(LocalDateTime.now(ZoneId.of("Asia/Seoul")))
+                .totalPrice(partyRoomReservationRequestDto.getTotalPrice())
+                .build();
 
-        boolean isValidReservationCapacity = isValidReservationCapacity(partyRoomReservationDto);
-        boolean isValidTimeSlot = isValidTimeSlot(partyRoomReservationDto);
+        isRoomReservationAvailable(partyRoomReservationDto);
 
-        if (isValidReservationCapacity && isValidTimeSlot) {
-            PartyRoomReservation partyRoomReservation = partyRoomReservationConverter.convertToEntity(partyRoomReservationDto);
-            partyRoomReservationRepository.save(partyRoomReservation);
+        PartyRoomReservation partyRoomReservation = partyRoomReservationConverter.convertToEntity(partyRoomReservationDto);
+        partyRoomReservationRepository.save(partyRoomReservation);
 
-            log.info("save into party_room_reservation: {} ", partyRoomReservation.getReservationId());
-        } else throw new RuntimeException(); //TODO: 예외 처리
+        log.info("save into party_room_reservation: {}", partyRoomReservation.getReservationId());
     }
 
-    public List<PartyRoomReservationDto> findAllByMember(MemberDto memberDto) {
+    private void isValidReservationCapacity(PartyRoomReservationDto partyRoomReservationDto) {
+        if (!(partyRoomReservationDto.getPartyRoomDto().getGuestCapacity() >= partyRoomReservationDto.getGuestCount()))
+            throw new RuntimeException("exceeds capacity");
+    }
 
-        List<PartyRoomReservation> findAllByGuest = partyRoomReservationRepository.findAllByGuest(memberDto.getMemberSrl());
+    private void isValidTimeSlot(PartyRoomReservationDto partyRoomReservationDto) {
+        List<PartyRoomOperationDayDto> findPartyRoomOperationDayList = partyRoomOperationDayService.findOperationDaysByPartyRoom(partyRoomConverter.convertFromDto(partyRoomReservationDto.getPartyRoomDto()));
 
-        if (CollectionUtils.isEmpty(findAllByGuest)) {
+        List<DayOfWeek> operationDays = findPartyRoomOperationDayList.stream()
+                .map(PartyRoomOperationDayDto::getOperationDay)
+                .toList();
+        int openingHour = partyRoomReservationDto.getPartyRoomDto().getOpeningHour();
+        int closingHour = partyRoomReservationDto.getPartyRoomDto().getClosingHour();
+
+        DayOfWeek startDayOfWeek = partyRoomReservationDto.getStartTime().getDayOfWeek();
+        DayOfWeek endDayOfWeek = partyRoomReservationDto.getEndTime().getDayOfWeek();
+        int startHour = partyRoomReservationDto.getStartTime().getHour();
+        int endHour = partyRoomReservationDto.getEndTime().getHour();
+
+        if (!((operationDays.contains(startDayOfWeek) && operationDays.contains(endDayOfWeek))
+                && (startHour >= openingHour && endHour <= closingHour)))
+            throw new RuntimeException("unavailable for reservation");
+    }
+
+    private void isAlreadyReserved(PartyRoomReservationDto partyRoomReservationDto) {
+        List<PartyRoomReservation> partyRoomReservationList = partyRoomReservationRepository.findByDateTimeReserved(partyRoomReservationDto.getStartTime(), partyRoomReservationDto.getEndTime());
+
+        for (PartyRoomReservation reservation : partyRoomReservationList)
+            if (reservation.getPaymentStatus().equals(PaymentStatus.COMPLETE) || reservation.getPaymentStatus().equals(PaymentStatus.PENDING))
+                throw new RuntimeException("already reserved");
+    }
+
+    private void isRoomReservationAvailable(PartyRoomReservationDto partyRoomReservationDto) {
+        isValidTimeSlot(partyRoomReservationDto);
+        isValidReservationCapacity(partyRoomReservationDto);
+        isAlreadyReserved(partyRoomReservationDto);
+    }
+
+    public List<PartyRoomReservationResponseDto> findAllByMember(MemberDto memberDto) {
+
+        List<PartyRoomReservation> findReservationListByGuest = partyRoomReservationRepository.findAllByGuest(memberDto.getMemberSrl());
+
+        if (CollectionUtils.isEmpty(findReservationListByGuest)) {
             log.info("search party_room_reservation by reservation_id is empty");
             return Collections.emptyList();
         } else {
-            log.info("search party_room_reservation by reservation_id: {}", findAllByGuest.get(0).getReservationId());
+            log.info("search party_room_reservation list by memberSrl: {}",
+                    findReservationListByGuest.get(0).getReservationGuest().getMemberSrl());
 
-            return findAllByGuest.stream()
-                    .map(partyRoomReservationConverter::convertToDto)
-                    .collect(Collectors.toList());
+            return findReservationListByGuest.stream()
+                    .map(r -> PartyRoomReservationResponseDto.builder()
+                            .partyRoomImageDto(partyRoomImageService.findPartyRoomMainImageByPartyRoom(r.getPartyRoom()))
+                            .partyRoomLocationDto(partyRoomLocationService.findLocationDtoByPartyRoom(r.getPartyRoom()))
+                            .partyRoomReservationDto(partyRoomReservationConverter.convertToDto(r))
+                            .build())
+                    .toList();
         }
     }
 
-    public PartyRoomReservationDto findDtoByReservationId(long reservationId) {
-        PartyRoomReservationDto findPartyRoomReservationDto = partyRoomReservationConverter.convertToDto(
-                partyRoomReservationRepository.findById(reservationId).orElseThrow(RuntimeException::new));
+    public PartyRoomReservationResponseDto findDtoByReservationId(long reservationId) {
+
+        PartyRoomReservationDto partyRoomReservationDto = partyRoomReservationConverter.convertToDto(partyRoomReservationRepository.findById(reservationId)
+                .orElseThrow(RuntimeException::new));
+
+        PartyRoomDetailDto partyRoomDetailDto = partyRoomService.findDetailDtoById(partyRoomReservationDto.getPartyRoomDto().getPartyRoomId());
+
+        PartyRoomReservationResponseDto partyRoomReservationResponseDto = PartyRoomReservationResponseDto.builder()
+                .partyRoomReservationDto(partyRoomReservationDto)
+                .partyRoomLocationDto(partyRoomDetailDto.getPartyRoomLocationDto())
+                .partyRoomImageDto(partyRoomDetailDto.getPartyRoomImageDtoList().stream()
+                        .filter(image -> image.getPartyRoomImageType() == PartyRoomImageType.MAIN)
+                        .findFirst().orElse(null))
+                .build();
 
         log.info("find party_room_reservation by reservation id: {}", reservationId);
 
-        return findPartyRoomReservationDto;
+        return partyRoomReservationResponseDto;
     }
 
     public PartyRoomReservation findByReservationId(long reservationId) {
@@ -92,29 +160,6 @@ public class PartyRoomReservationService {
         log.info("find party_room_reservation by reservation id: {}", reservationId);
 
         return findPartyRoomReservation;
-    }
-
-    public boolean isValidReservationCapacity(PartyRoomReservationDto partyRoomReservationDto) {
-        return partyRoomReservationDto.getPartyRoomDto().getGuestCapacity() >= partyRoomReservationDto.getGuestCount();
-    }
-
-    public boolean isValidTimeSlot(PartyRoomReservationDto partyRoomReservationDto) {
-        List<PartyRoomOperationDay> findPartyRoomOperationDay = partyRoomOperationDayRepository.findByPartyRoom(partyRoomConverter.convertFromDto(partyRoomReservationDto.getPartyRoomDto()));
-
-        //TODO: 로직 구체화(중복 체크 등)
-        List<DayOfWeek> operationDays = findPartyRoomOperationDay.stream()
-                .map(PartyRoomOperationDay::getOperationDay)
-                .toList();
-        int openingHour = partyRoomReservationDto.getPartyRoomDto().getOpeningHour();
-        int closingHour = partyRoomReservationDto.getPartyRoomDto().getClosingHour();
-
-        DayOfWeek startDayOfWeek = partyRoomReservationDto.getStartTime().getDayOfWeek();
-        DayOfWeek endDayOfWeek = partyRoomReservationDto.getEndTime().getDayOfWeek();
-        int startHour = partyRoomReservationDto.getStartTime().getHour();
-        int endHour = partyRoomReservationDto.getEndTime().getHour();
-
-        return (operationDays.contains(startDayOfWeek) && operationDays.contains(endDayOfWeek))
-                && (startHour >= openingHour && endHour <= closingHour);
     }
 
     @Transactional
